--- a/ss16/build.gradle
+++ b/ss16/build.gradle
@@ -46,6 +46,7 @@ dependencies {
     compileOnly 'org.projectlombok:lombok:1.18.34'
     annotationProcessor('org.projectlombok:lombok:1.18.34')
     implementation("org.thymeleaf:thymeleaf-spring5:3.0.12.RELEASE")
+    implementation 'org.webjars:bootstrap:5.3.5'
 }
 
 test {
